Fixed major issue when searching on mobile Better UI in smaller devices

--- a/css/mods.css
+++ b/css/mods.css
@@ -40,9 +40,8 @@ a:active {
     grid-template-areas:
         "nome-gioco cerca"
         "nome-mod cerca";
-    width: 80%;
+    width: 100%;
     justify-content: center;
-
     padding-bottom: 20px;
 }
 
@@ -246,7 +245,7 @@ span {
     flex-direction: column;
     /* width: 80%; */
     margin: 5px 0;
-    padding-left: 10%;
+    padding-left: 5%;
     padding-right: 2.5%;
 }
 
@@ -256,31 +255,51 @@ span {
     /* width: 10%; */
     height: 151px;
     /* margin: 0 5%; */
-    align-items: center;
     justify-content: center;
-    padding-right: 10%;
+    padding-right: 5%;
     padding-top: 30%;
     padding-left: 2.5%;
+    align-items: flex-start;
+}
+
+#mod-image-container {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+}
+
+#mod-image {
+    width: 100px;
+}
+
+#mod-name {
+    margin: 0;
+    padding-left: 10px;
 }
 
 .tabs {
     display: flex;
     width: 100%;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    border-bottom: 1px solid var(--primary) !important;
 }
 
 .tab {
     list-style-type: none;
     height: 60px;
     margin: 0;
+    display: flex;
+    align-items: center;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .tab-button {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--primary) !important;
     border-radius: 0;
-
-
     background-color: transparent;
     border: none;
     margin: 0;
@@ -296,7 +315,7 @@ span {
     fill: var(--primary);
 }
 
-.tab-content {
+#tab-content {
     padding-left: var(--spacing);
 }
 
@@ -307,7 +326,7 @@ span {
 } */
 
 #page-selector {
-    margin-bottom: 10px;
+    margin: 10px 0;
     display: flex;
     align-items: center;
 }
@@ -317,7 +336,6 @@ span {
     margin: 0;
     padding: 0 5px;
     width: 5%;
-    height: 1% !important;
     background-color: transparent;
     border: 0;
     color: var(--primary);
@@ -333,20 +351,22 @@ span {
     transform: rotate(180deg);
 }
 
-/* #container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+#container {
     width: 100%;
-    height: 100%;
-    padding: 10% 10%;
-    margin: 22% 0;
-    justify-content: flex-start;
-
     background-color: #0e1419;
     border-radius: 15px;
-} */
+    padding: 5% 10%;
+}
 
 /* .page-button:disabled[number="true"] {
     opacity: 100;
 } */
+
+progress {
+    width: 50%;
+}
+
+.loading {
+    justify-content: center;
+}
+
